Add noscript tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <link rel="stylesheet" href="/src/style.css" />
         <script type="module" src="/src/main.js"></script>
     </head>
-
-    <body></body>
+    <body>
+        <noscript>
+            <p>
+              Your browser does not support JavaScript. Please enable JavaScript to
+              continue using this website.
+            </p>
+          </noscript>
+    </body>
 </html>
